# virtualbmc

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.md  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  virtualbmc.py
debian/: .gitignore  changelog  control  copyright  rules  virtualbmc.postrm.debhelper  virtualbmc.service
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/user/: index.rst
playbooks/legacy/virtualbmc-tempest-dsvm-ironic-pxe_ipmitool-src/: run.yaml
playbooks/legacy/virtualbmc-tempest-ironic-ipmi-iscsi/: run.yaml
playbooks/legacy/virtualbmc-tempest-ironic-ipmi-iscsi-python2/: run.yaml
releasenotes/notes/: add-client-server-overhaul-c5b6f8c01126b4a3.yaml  add-config-env-8287bea486821653.yaml  drop-py-2-7-afe69612bfabaeee.yaml  fix-hanging-on-pipe-7c4b5f9c81623b524.yaml  ignore-start-if-running-c9a8f6c0514624a1.yaml  preserve-libvirt-domain-info-955410f570060241.yaml  py36-37-bye-bye-f3268421bf6c5bb4.yaml  remove-py39-7216a052c6029aa9.yaml  remove-vbmcd-autostart-d1f567803526a4c1.yaml  show-error-status-13456782b3a5a6e2.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
virtualbmc/: __init__.py  config.py  control.py  exception.py  log.py  manager.py  utils.py  vbmc.py  virtualbmc.py
virtualbmc/cmd/: vbmc.py  vbmcd.py
virtualbmc/tests/: test_virtualbmc.py
virtualbmc/tests/unit/: base.py  test_config.py  test_control.py  test_manager.py  test_utils.py  test_vbmc.py  utils.py
virtualbmc/tests/unit/cmd/: test_vbmc.py  test_vbmcd.py
zuul.d/: legacy-virtualbmc-jobs.yaml  project.yaml  virtualbmc-jobs.yaml
