[metadata]
name = virtualbmc
summary = Create virtual BMCs for controlling virtual instances via IPMI
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/virtualbmc/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    virtualbmc

[entry_points]
console_scripts =
    vbmc = virtualbmc.cmd.vbmc:main
    vbmcd = virtualbmc.cmd.vbmcd:main

virtualbmc =
    add = virtualbmc.cmd.vbmc:AddCommand
    delete = virtualbmc.cmd.vbmc:DeleteCommand
    start = virtualbmc.cmd.vbmc:StartCommand
    stop = virtualbmc.cmd.vbmc:StopCommand
    list = virtualbmc.cmd.vbmc:ListCommand
    show = virtualbmc.cmd.vbmc:ShowCommand

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = virtualbmc/locale
domain = virtualbmc

[update_catalog]
domain = virtualbmc
output_dir = virtualbmc/locale
input_file = virtualbmc/locale/virtualbmc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = virtualbmc/locale/virtualbmc.pot
