[metadata]
name = virtualbmc
summary = Create virtual BMCs for controlling virtual instances via IPMI
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/virtualbmc/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    virtualbmc

[entry_points]
console_scripts =
    vbmc = virtualbmc.cmd.vbmc:main
    vbmcd = virtualbmc.cmd.vbmcd:main

virtualbmc =
    add = virtualbmc.cmd.vbmc:AddCommand
    delete = virtualbmc.cmd.vbmc:DeleteCommand
    start = virtualbmc.cmd.vbmc:StartCommand
    stop = virtualbmc.cmd.vbmc:StopCommand
    list = virtualbmc.cmd.vbmc:ListCommand
    show = virtualbmc.cmd.vbmc:ShowCommand
